--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ th { background:#f7931e; color:white; }
 input[type=time], input[type=text], input[type=date], select, #filterInput { width:90%; padding:4px; margin:2px 0; }
 .employee-item { display:flex; align-items:center; justify-content:flex-start; padding:2px 4px; margin:2px 0; background:#f7931e; border-radius:4px; color:white; font-size:0.9em; }
 .employee-item button { margin-right:5px; background:red; color:white; border:none; border-radius:3px; cursor:pointer; }
-.collapsible { background:#262e87; color:white; cursor:pointer; padding:8px; width:100%; border:none; text-align:left; outline:none; font-size:0.9em; border-radius:3px; margin-top:5px; }
+.collapsible { background:#262e87; color:white; cursor:pointer; padding:8px; width:100%; border:none; text-align:left; outline:none; font-size:0.9em; border-radius:3px; margin-top:5px; touch-action: manipulation; }
 .active, .collapsible:hover { background:#3a2b7c; }
 .content { display:none; overflow:hidden; padding-left:10px; }
 #overtimeSummary { margin-top:10px; font-weight:bold; color:#262e87; }
@@ -75,13 +75,12 @@ input[type=time], input[type=text], input[type=date], select, #filterInput { wid
 // ==========================
 // Global Data
 let teamTemplate = [
-  { name:"Team 1" },
-  { name:"Team 2" },
-  { name:"Team 3" },
-  { name:"Team 4" },
-  { name:"OFF" }
+  { name:"Team 1", site:"", siteIn:"", siteOut:"", employees:[] },
+  { name:"Team 2", site:"", siteIn:"", siteOut:"", employees:[] },
+  { name:"Team 3", site:"", siteIn:"", siteOut:"", employees:[] },
+  { name:"Team 4", site:"", siteIn:"", siteOut:"", employees:[] },
+  { name:"OFF", employees:[] }
 ];
-
 let masterEmployees = JSON.parse(localStorage.getItem("masterEmployees")) || [];
 let masterSites = JSON.parse(localStorage.getItem("masterSites")) || [];
 let allData = JSON.parse(localStorage.getItem("allData")) || {};
@@ -120,10 +119,7 @@ document.addEventListener("click", e=>{
 // Initialize or Load Date Data
 function initDateData(){
   if(!allData[selectedDate]){
-    allData[selectedDate] = {
-      teams: JSON.parse(JSON.stringify(teamTemplate)),
-      employees: {}
-    };
+    allData[selectedDate] = { teams: JSON.parse(JSON.stringify(teamTemplate)), employees: {} };
   }
 }
 
@@ -184,7 +180,6 @@ function buildTeamsContent(){
   menu.innerHTML="";
   const teams = allData[selectedDate].teams;
   teams.forEach(team=>{
-    if(team.name!=="OFF" && (!team.employees || team.employees.length===0)) team.employees=[];
     const teamDiv=document.createElement("div");
     const title=document.createElement("h4"); title.textContent=team.name; teamDiv.appendChild(title);
 
@@ -221,45 +216,47 @@ function buildTeamsContent(){
 
     // Employee list
     const ul=document.createElement("ul"); ul.dataset.team=team.name;
-    team.employees = team.employees.map(emp=>{
-      const saved=allData[selectedDate].employees[emp.id]||{};
-      return {...emp,...saved};
-    });
-
     team.employees.forEach(emp=>{
       const li=document.createElement("li"); li.className="employee-item";
       const delBtn=document.createElement("button"); delBtn.textContent="❌";
-      delBtn.onclick=()=>{
-        team.employees = team.employees.filter(e=>e.id!==emp.id);
-        delete allData[selectedDate].employees[emp.id];
-        buildTeamsContent(); buildEmployeeTable(filterInput.value.trim().toLowerCase());
-      };
+      delBtn.onclick=()=>{ team.employees = team.employees.filter(e=>e.id!==emp.id); buildTeamsContent(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); };
       li.appendChild(delBtn); li.appendChild(document.createTextNode(emp.name+(team.name!=="OFF"?` (${emp.site||team.site})`:"")));
       li.dataset.empId = emp.id;
       ul.appendChild(li);
     });
 
-    // Employee dropdown
+    // Add Employee
     const addSelect = document.createElement("select");
-    const defaultOption = document.createElement("option"); defaultOption.value = ""; defaultOption.textContent = "Select Employee"; addSelect.appendChild(defaultOption);
-    masterEmployees.forEach(empName => { const option = document.createElement("option"); option.value = empName; option.textContent = empName; addSelect.appendChild(option); });
-    const addBtn = document.createElement("button"); addBtn.textContent = "➕ Add Employee";
-    addBtn.onclick = () => {
+    const defaultOption = document.createElement("option"); defaultOption.value=""; defaultOption.textContent="Select Employee"; addSelect.appendChild(defaultOption);
+    masterEmployees.forEach(empName => { const option=document.createElement("option"); option.value=empName; option.textContent=empName; addSelect.appendChild(option); });
+    const addBtn=document.createElement("button"); addBtn.textContent="➕ Add Employee";
+    addBtn.onclick=()=>{
       const selectedEmp = addSelect.value; if(!selectedEmp) return;
       if(team.employees.some(e=>e.name===selectedEmp)){ alert("Employee already in this team"); return; }
-      const emp = { id: Date.now(), name: selectedEmp, team: team.name, site:"" };
+      const emp = { id:Date.now(), name:selectedEmp, team:team.name, site:team.site||"" };
       team.employees.push(emp);
-      allData[selectedDate].employees[emp.id] = { ...emp };
+      allData[selectedDate].employees[emp.id]={ site:team.site||"", in:team.siteIn||"", out:team.siteOut||"" };
       localStorage.setItem("allData", JSON.stringify(allData));
       buildTeamsContent(); buildEmployeeTable(filterInput.value.trim().toLowerCase());
     };
     teamDiv.appendChild(addSelect); teamDiv.appendChild(addBtn);
 
-    new Sortable(ul,{group:'employees', animation:150, delay:150, delayOnTouchOnly:true, onEnd: evt=>{
-      const empId=evt.item.dataset.empId; const newTeamName=evt.to.dataset.team;
-      moveEmployeeToTeam(empId,newTeamName);
-    }});
-    teamDiv.appendChild(ul); menu.appendChild(teamDiv);
+    new Sortable(ul,{
+      group:'employees',
+      animation:150,
+      delay:150,
+      delayOnTouchOnly:true,
+      filter:'button',
+      preventOnFilter:false,
+      onEnd: evt=>{
+        const empId=evt.item.dataset.empId;
+        const newTeamName=evt.to.dataset.team;
+        moveEmployeeToTeam(empId,newTeamName);
+      }
+    });
+
+    teamDiv.appendChild(ul);
+    menu.appendChild(teamDiv);
   });
 }
 
@@ -272,69 +269,61 @@ function moveEmployeeToTeam(empId,newTeamName){
     oldTeam.employees = oldTeam.employees.filter(e=>e.id!==empId);
     const newTeam = teams.find(t=>t.name===newTeamName);
     emp.team=newTeamName; newTeam.employees.push(emp);
-    allData[selectedDate].employees[emp.id] = {...emp};
     localStorage.setItem("allData", JSON.stringify(allData));
     buildTeamsContent(); buildEmployeeTable(filterInput.value.trim().toLowerCase());
   }
 }
 
 // ==========================
-// Table & Overtime
-const overtimeSummary = document.getElementById("overtimeSummary");
-filterInput.addEventListener("input", ()=>{ buildEmployeeTable(filterInput.value.trim().toLowerCase()); });
-
+// Build Employee Table
 function buildEmployeeTable(filterText=""){
   const table=document.getElementById("employeeTable");
   table.innerHTML=`<tr><th>Employee Name</th><th>Date</th><th>Site Name</th><th>Site In</th><th>Site Out</th><th>Total Hours</th><th>Overtime Hours</th></tr>`;
   const teams = allData[selectedDate].teams;
-  Object.values(allData[selectedDate].employees).forEach(emp=>{
+  teams.forEach(team=>team.employees.forEach(emp=>{
     if(filterText && !emp.name.toLowerCase().includes(filterText)) return;
-    const row = table.insertRow();
-    row.insertCell(0).textContent = emp.name;
-    row.insertCell(1).textContent = selectedDate;
-    const siteInput=document.createElement("input"); siteInput.value=emp.site||"";
-    row.insertCell(2).appendChild(siteInput);
-    const inInput=document.createElement("input"); inInput.type="time"; inInput.value=emp.in||"";
-    const outInput=document.createElement("input"); outInput.type="time"; outInput.value=emp.out||"";
-    row.insertCell(3).appendChild(inInput); row.insertCell(4).appendChild(outInput);
-    const totalCell=row.insertCell(5); const overtimeCell=row.insertCell(6);
-    const [totalH,overtimeH] = calculateHours(inInput,outInput,totalCell,overtimeCell);
-
-    function updateAndSave(){
-      const [totalH,overtimeH]=calculateHours(inInput,outInput,totalCell,overtimeCell);
-      allData[selectedDate].employees[emp.id] = { ...allData[selectedDate].employees[emp.id], site:siteInput.value, in:inInput.value, out:outInput.value };
-      localStorage.setItem("allData", JSON.stringify(allData));
-      updateOvertimeSummary();
-    }
-    inInput.addEventListener("change", updateAndSave);
-    outInput.addEventListener("change", updateAndSave);
-    siteInput.addEventListener("change", updateAndSave);
-  });
+    const row=table.insertRow();
+    row.insertCell(0).textContent=emp.name;
+    row.insertCell(1).textContent=selectedDate;
+    const empData = allData[selectedDate].employees[emp.id]||{};
+    row.insertCell(2).textContent=empData.site||"";
+    row.insertCell(3).textContent=empData.in||"";
+    row.insertCell(4).textContent=empData.out||"";
+    const total = calculateHoursValue(empData.in,empData.out);
+    row.insertCell(5).textContent=total.toFixed(2);
+    row.insertCell(6).textContent=Math.max(0,total-9).toFixed(2);
+  }));
   updateOvertimeSummary();
-}
-
-function calculateHours(inInput,outInput,totalCell,overtimeCell){
-  const inTime=inInput.value, outTime=outInput.value;
-  if(!inTime||!outTime){ totalCell.textContent="0.00"; overtimeCell.textContent="0.00"; totalCell.style.background="lightcoral"; overtimeCell.style.background="lightcoral"; return [0,0]; }
-  totalCell.style.background=""; overtimeCell.style.background="";
-  const [inH,inM]=inTime.split(":").map(Number); const [outH,outM]=outTime.split(":").map(Number);
-  let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24;
-  totalCell.textContent=diff.toFixed(2);
-  const overtime=(diff>9?diff-9:0); overtimeCell.textContent=overtime.toFixed(2);
-  return [diff,overtime];
 }
 
 function calculateHoursValue(inTime,outTime){
   if(!inTime||!outTime) return 0;
-  const [inH,inM]=inTime.split(":").map(Number); const [outH,outM]=outTime.split(":").map(Number);
-  let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24; return diff;
+  const [inH,inM]=inTime.split(":").map(Number);
+  const [outH,outM]=outTime.split(":").map(Number);
+  let diff=(outH*60+outM-(inH*60+inM))/60;
+  if(diff<0) diff+=24;
+  return diff;
 }
 
 function updateOvertimeSummary(){
-  let totalOT=0; const table=document.getElementById("employeeTable");
-  for(let i=1;i<table.rows.length;i++){ let val=parseFloat(table.rows[i].cells[6].textContent); if(!isNaN(val)) totalOT+=val; }
-  overtimeSummary.textContent="Total Overtime: "+totalOT.toFixed(2)+" hrs";
+  let totalOT=0;
+  const table=document.getElementById("employeeTable");
+  for(let i=1;i<table.rows.length;i++){
+    let val=parseFloat(table.rows[i].cells[6].textContent);
+    if(!isNaN(val)) totalOT+=val;
+  }
+  document.getElementById("overtimeSummary").textContent="Total Overtime: "+totalOT.toFixed(2)+" hrs";
 }
+
+// ==========================
+// Save Data
+document.getElementById("saveBtn").addEventListener("click", ()=>{
+  localStorage.setItem("allData", JSON.stringify(allData));
+  alert("✅ Data saved for "+selectedDate);
+});
+
+// ==========================
+// Clear Data already handled
 
 // ==========================
 // Export CSV
@@ -343,60 +332,54 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
   const toDate=document.getElementById("exportTo").value||selectedDate;
   let rows=[["Employee Name","Date","Site Name","Site In","Site Out","Total Hours","Overtime Hours"]];
   Object.keys(allData).sort().filter(d=>d>=fromDate && d<=toDate).forEach(date=>{
-    const dateData = allData[date];
-    dateData.teams.forEach(team=>{
-      team.employees.forEach(emp=>{
-        const empData = dateData.employees[emp.id]; if(!empData) return;
-        let total="", overtime="";
-        if(empData.in && empData.out){
-          const [inH,inM]=empData.in.split(":").map(Number); const [outH,outM]=empData.out.split(":").map(Number);
-          let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24; total=diff.toFixed(2); overtime=(diff>9?diff-9:0);
-        }
-        rows.push([emp.name,date,empData.site||emp.site,empData.in||"",empData.out||"",total,overtime]);
-      });
-    });
+    const teams = allData[date].teams;
+    teams.forEach(team=>team.employees.forEach(emp=>{
+      const empData = allData[date].employees[emp.id]; if(!empData) return;
+      const total = calculateHoursValue(empData.in,empData.out);
+      rows.push([emp.name,date,empData.site||"",empData.in||"",empData.out||"",total.toFixed(2),Math.max(0,total-9).toFixed(2)]);
+    }));
   });
   const blob=new Blob([rows.map(r=>r.join(",")).join("\n")],{type:"text/csv"});
   const a=document.createElement("a"); a.href=URL.createObjectURL(blob); a.download="employee_hours.csv"; a.click();
 });
 
-// ==========================
-// Save Data Button
-document.getElementById("saveBtn").addEventListener("click", ()=>{
-  localStorage.setItem("allData", JSON.stringify(allData));
-  alert("✅ Data saved for "+selectedDate);
-});
+
 
 // ==========================
 // View Filter Button (date range)
 document.getElementById("viewFilterBtn").addEventListener("click", ()=>{
-  const fromDate=document.getElementById("exportFrom").value||selectedDate;
-  const toDate=document.getElementById("exportTo").value||selectedDate;
+  const fromDate = document.getElementById("exportFrom").value || selectedDate;
+  const toDate = document.getElementById("exportTo").value || selectedDate;
   const filterText = filterInput.value.trim().toLowerCase();
+  
+  // Clear table and show filtered data
   const table = document.getElementById("employeeTable");
-  table.innerHTML=`<tr><th>Employee Name</th><th>Date</th><th>Site Name</th><th>Site In</th><th>Site Out</th><th>Total Hours</th><th>Overtime Hours</th></tr>`;
-  Object.keys(allData).sort().filter(d=>d>=fromDate && d<=toDate).forEach(date=>{
-    const dateData = allData[date];
-    dateData.teams.forEach(team=>{
-      team.employees.forEach(emp=>{
-        if(filterText && !emp.name.toLowerCase().includes(filterText)) return;
-        const row = table.insertRow();
-        row.insertCell(0).textContent = emp.name;
-        row.insertCell(1).textContent = date;
-        const empData = dateData.employees[emp.id];
-        row.insertCell(2).textContent = empData.site||"";
-        row.insertCell(3).textContent = empData.in||"";
-        row.insertCell(4).textContent = empData.out||"";
-        const totalHours = calculateHoursValue(empData.in, empData.out);
-        row.insertCell(5).textContent = totalHours.toFixed(2);
-        row.insertCell(6).textContent = Math.max(0,totalHours-9).toFixed(2);
-      });
-    });
+  table.innerHTML = `<tr>
+    <th>Employee Name</th><th>Date</th><th>Site Name</th>
+    <th>Site In</th><th>Site Out</th><th>Total Hours</th><th>Overtime Hours</th>
+  </tr>`;
+  
+  Object.keys(allData).sort().filter(d => d >= fromDate && d <= toDate).forEach(date => {
+    const teams = allData[date].teams;
+    teams.forEach(team => team.employees.forEach(emp => {
+      if(filterText && !emp.name.toLowerCase().includes(filterText)) return;
+      const row = table.insertRow();
+      const empData = allData[date].employees[emp.id] || {};
+      row.insertCell(0).textContent = emp.name;
+      row.insertCell(1).textContent = date;
+      row.insertCell(2).textContent = empData.site || "";
+      row.insertCell(3).textContent = empData.in || "";
+      row.insertCell(4).textContent = empData.out || "";
+      const total = calculateHoursValue(empData.in, empData.out);
+      row.insertCell(5).textContent = total.toFixed(2);
+      row.insertCell(6).textContent = Math.max(0, total-9).toFixed(2);
+    }));
   });
+  updateOvertimeSummary();
 });
 
 // ==========================
-// Share Team Count
+// Share Team Count Button
 document.getElementById("shareTeamCountBtn").addEventListener("click", ()=>{
   localStorage.setItem("allData", JSON.stringify(allData));
   window.open("team_count.html?date="+selectedDate,"_blank");
@@ -404,7 +387,9 @@ document.getElementById("shareTeamCountBtn").addEventListener("click", ()=>{
 
 // ==========================
 // Initialize
-initDateData(); buildTeamsContent(); buildEmployeeTable();
+initDateData();
+buildTeamsContent();
+buildEmployeeTable();
 </script>
 
 </body>
